Shorter 2-page industry CV

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 							<i class="fa fa-graduation-cap" aria-hidden="true"></i>CV
 						</button>
 						<div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-							<a href="files/jasonkim-cv-academic.pdf" class="dropdown-item">Academic</a>
-							<a href="files/jasonkim-cv-industry.pdf" class="dropdown-item">Industry</a>
+							<a href="files/jasonkim-cv-academic.pdf" class="dropdown-item">Academic (Full Version)</a>
+							<a href="files/jasonkim-cv-industry.pdf" class="dropdown-item">Industry (Brief Version)</a>
 						</div>
 					</div>
 					<button type="button" class="btn btn-secondary mr-0 ml-0 pr-0 pl-0" disabled></button>
