--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 							undergraduate minor in biology. I was also on the course staff of Michigan's <a
 								href="https://eecs388.org">computer security course</a> for two years as a teaching
 							assistant, and brought components of it over to Georgia Tech's <a
-								href="https://gtinfosec.org/"">Introduction to Information Security</a> over a year's tenure.</p>
+								href="https://gtinfosec.org/"">Introduction to Information Security</a> over a year's tenure. My favorite part of it was organizing and updating a digital forensics Capture-the-Flag, which served as the final project for both courses.</p>
 
 								<h4 style=" color: #0088ff"><small>nosajmik@gthwsec:~$</small> ls publications/</h4>
 								<ul>
