--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
 		<!-- Raleway from Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y5S159R5WY"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-Y5S159R5WY');
+		</script>
+
 		<style>
 			/* Raleway as default for body */
 			body {
